# app-sts-silicom

./: .gitreview  .zuul.yaml  HACKING.rst  debian_iso_image.inc  debian_pkg_dirs
helm-charts/upstream/sts-silicom-helm/debian/: meta_data.yaml
python-k8sapp-sts-silicom/debian/: meta_data.yaml
python-k8sapp-sts-silicom/debian/deb_folder/: changelog  python3-k8sapp-sts-silicom-wheels.install  python3-k8sapp-sts-silicom.install  rules
python-k8sapp-sts-silicom/k8sapp_sts_silicom/: .stestr.conf  setup.cfg  setup.py  tox.ini
python-k8sapp-sts-silicom/k8sapp_sts_silicom/k8sapp_sts_silicom/helm/: sts_silicom.py
python-k8sapp-sts-silicom/k8sapp_sts_silicom/k8sapp_sts_silicom/lifecycle/: lifecycle_sts_silicom.py
python-k8sapp-sts-silicom/k8sapp_sts_silicom/k8sapp_sts_silicom/tests/: test_sts_silicom.py
python3-k8sapp-sts-silicom/debian/: meta_data.yaml
python3-k8sapp-sts-silicom/debian/all/deb_folder/: control
python3-k8sapp-sts-silicom/debian/deb_folder/: control  copyright  rules
python3-k8sapp-sts-silicom/k8sapp_sts_silicom/: LICENSE  README.rst  setup.cfg  test-requirements.txt  tox.ini
stx-sts-silicom-helm/debian/: meta_data.yaml
stx-sts-silicom-helm/debian/deb_folder/: changelog  control  copyright  rules
stx-sts-silicom-helm/stx-sts-silicom-helm/files/: 0003-Add-imagePullSecrets-to-daemonset.patch
stx-sts-silicom-helm/stx-sts-silicom-helm/fluxcd-manifests/: kustomization.yaml
stx-sts-silicom/debian/all/: meta_data.yaml
stx-sts-silicom/debian/all/deb_folder/: changelog  rules  (+1 more)
stx-sts-silicom/debian/deb_folder/: control  copyright
(+20 files in other folders)
