[metadata]
name = k8sapp-sts-silicom
summary = StarlingX sysinv extensions for sts-silicom
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache 2.0
author = StarlingX
author-email = starlingx-discuss@lists.starlingx.io
home-page = https://www.starlingx.io/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    k8sapp_sts_silicom

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
systemconfig.helm_applications =
    sts-silicom = systemconfig.helm_plugins.sts_silicom

systemconfig.helm_plugins.sts_silicom =
    001_sts-silicom = k8sapp_sts_silicom.helm.sts_silicom:StsSilicomHelm

systemconfig.app_lifecycle =
    sts-silicom = k8sapp_sts_silicom.lifecycle.lifecycle_sts_silicom:StsSilicomAppLifecycleOperator

[wheel]
universal = 1
